@@ -117,6 +117,8 @@ Bug fixes since 2.3
 
 - Better Javadoc for DateTimeFormat fraction of second [#62]
 
+- Better Javadoc for DateTime toString and parse [#142]
+
 - Fix Javadoc for ReadableDuration [#137]
 
 
